2005-05-07  Sebastien Pouliot  <sebastien@ximian.com>

	* SequentialSearchPrimeGeneratorBase.cs: Start the smallPrime vector at
	10 (not 9) as 29 was just tested (more for correctness than speed gain).

2004-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* NextPrimeFinder.cs: FxCop-ized. CLS compliance.
	* PrimeGeneratorBase.cs: FxCop-ized. CLS compliance.
	* SequentialSearchPrimeGeneratorBase.cs: FxCop-ized. CLS compliance.

2004-02-13  Sebastien Pouliot  <sebastien@ximian.com>

	* PrimeGeneratorBase.cs: Changed primality test to Rabin Miller to
	fix issues #51229 (bug), #54262 (very long in same cases).

2004-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* NextPrimeFinder.cs: New. Copied from corlib. Required for PKCS1 and
	RSAManaged (which are required for TLS).
	* PrimeGeneratorBase.cs: New. Copied from corlib. Required for PKCS1 
	and RSAManaged (which are required for TLS).
	* SequentialSearchPrimeGeneratorBase.cs: New. Copied from corlib. 
	Required for PKCS1 and RSAManaged (which are required for TLS).