@@ -1,3 +1,8 @@
+2004-09-17  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* SequentialSearchPrimeGeneratorBase.cs: In synch with corlib version. 
+	Fixed all level 4 compilation warnings.
+
 2005-05-07  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* SequentialSearchPrimeGeneratorBase.cs: Start the smallPrime vector at
